2009-02-25 Holger Vogt
 * inpdomod.c:436 error message adapted to existing devices

2009-02-25 Dietmar Warning
 * spicelib/parser/inp2q.c,155: 5-terminal only for adms bipolars

2009-02-24 Dietmar Warning
 * configure.in: removed Makefile for tests/TransImpedanceAmp
 * tests/bsim3/.../ac_sim/*.out: removed the imaginary part of frequency on x-axis

2009-02-23 Dietmar Warning
 * spicelib/parser/inpgmod.c: correct strstr compare
 * /tests/bsim3/*.cir: .options noacct added
 * /tests/bsim3/modelcard.*mos: correct level=8 and set version
 * /tests/.../*.cir: add level parameter for bjts to suppress the long line warning

2009-02-22 Holger Vogt
 * xspice/icm/makefile: *.cm for CYGWIN need to be made executable 
   (755 instead of 644)
 *  fteext.h spiceif.c options.c dotcards.c: .options NOACCT added
 * /tests/.../*.cir  .options noacct added (except BSIM3 files)
 * main.c:614 allow null terminator in string

2009-02-22 Dietmar Warning
 * devices/adms/mextram: Update to release version 504.7 now with selfheating
   as a 5 terminal version
 * tests/adms/mextram/*.sp: additional parameters for new mextram version needed
 * spicelib/parser/inpgmod.c, inp2q.c: Correct handling of adms 5 terminal models

2009-02-21 Holger Vogt
 * parse.c:922 prevent automtic deletion of @xxx[par]
   winmain.c: increased width of ngspice window to allow display
   of 80 characters per line (e.g. for command 'show'
   /tests/bin/check.sh: allow make check for CYGWIN (will fail though)

2009-02-20 Holger Vogt
 * x11disp.c: allow closing of help windows with WM x-button

2009-02-14 Dietmar Warning
 * src/spicelib/parser/inpdomod.c: map level 10 to bsimsoi4 and map ancient 
   version 4.0 and 4.1 of bsim4 to available version 4.2
 * DEVICES: corrections and actualizations, add short adms model descriptions
 * adms/hicum0/admsva/hicum0.va: a slight fix of TFH in version 1.12
 * adms/hicum2/admsva/hicum2.va: general update to version 2.23

2009-02-12 Dietmar Warning